--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@ color:blue;
 </form>
 </div>
 <div class="card-body">
-<form action="login.php" method="POST">
+<form action="login.html" method="POST">
 <div class="d-grid gap-2 col-4 mx-auto">
 <label for="name" class="form-label"><span class="already">Already registered?</span></label>
 <input type="submit" class="btn btn-primary" name="Login" Value="Login">
