--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ color:blue;
 <form action="http://vijay112003.github.io/main.html">
 <div class="d-grid gap-2 col-4 mx-auto">
 <label for="name" class="form-label"><span class="already">Are you ready?</span></label>
-<input type="submit" class="btn btn-primary" name="qmgdsvpdsvdsvz" Value="pvddhjbfjherff">
+<input type="submit" class="btn btn-primary" name="Yes" Value="Ready">
 </div>
 </form>
 </div>
