--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ color:blue;
 <div class="container mt-5 col-5">
 <div class="card">
 <h5 class="card-title m-3">Welcome!</h5>
-<form action="http://vijay112003.github.io/main.html">
+<form action="/main.html">
 <div class="d-grid gap-2 col-4 mx-auto">
 <label for="name" class="form-label"><span class="already">Are you ready?</span></label>
 <input type="submit" class="btn btn-primary" name="Yes" Value="Ready">
