--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@ color:blue;
 <div class="container mt-5 col-5">
 <div class="card">
 <h5 class="card-title m-3">Welcome!</h5>
-<form action="/main.html">
 <div class="d-grid gap-2 col-4 mx-auto">
 <label for="name" class="form-label"><span class="already">Are you ready?</span></label>
-<input type="submit" class="btn btn-primary" name="Yes" Value="Ready">
+<a href="main.html"><input type="submit" class="btn btn-primary" name="Yes" Value="Ready"></a>
 </div>
-</form>
 </div>
 </div>
 </div>
