--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ color:blue;
 <h5 class="card-title m-3">Welcome!</h5>
 <div class="d-grid gap-2 col-4 mx-auto">
 <label for="name" class="form-label"><span class="already">Are you ready?</span></label>
-<a href="main.html"><input type="submit" class="btn btn-primary" name="Yes" Value="Ready"></a>
+<a href="main.html"><input type="submit" class="btn btn-primary" Value="Ready"></a>
 </div>
 </div>
 </div>
