--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ color:blue;
 <div class="d-grid gap-2 col-4 mx-auto">
 <label for="name" class="form-label"><span class="already">Are you ready?</span></label>
 <a href="main.html"><input type="submit" class="btn btn-primary" Value="Ready"></a>
-</div>
+</div><br>
 </div>
 </div>
 </div>
