--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@ color:blue;
 <div class="card-body">
 <div class="d-grid gap-2 col-4 mx-auto">
 <label for="name" class="form-label"><span class="already">Already registered?</span></label>
-<input type="submit" class="btn btn-primary" name="Login" Value="Login"><br>
+<a href="login.html"><input type="submit" class="btn btn-primary" name="Login" Value="Login"></a>
 </div>
 </div>
 </div>
