--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 <div class="card">
 <h5 class="card-title m-3">Login for examination</h5>
 <div class="card-body">
-<form action="https://drive.google.com/file/d/1fPr1oRoABOttNbdS1MShbL4rCAL1gzXM/view?usp=sharing" method="POST">
+<form action="action.php" method="POST">
 <label for="name" class="form-label">Name</label>
 <input type="text" placeholder="Your name" name="uname" class="form-control mb-3" required>
 <label for="pass" class="form-label">Password</label>
